WebCore/platform/qt/RenderThemeQt.h
@@ -39,7 +39,7 @@ class HTMLMediaElement;
 class RenderThemeQt : public RenderTheme
 {
 private:
-    RenderThemeQt();
+    RenderThemeQt(Page* page);
     virtual ~RenderThemeQt();
 
 public:
@@ -141,15 +141,17 @@ private:
     void setButtonPadding(RenderStyle*) const;
     void setPopupPadding(RenderStyle*) const;
 
+    QStyle* qStyle() const;
+    QStyle* fallbackStyle();
+
+    Page* m_page;
+
 #ifdef Q_WS_MAC
     int m_buttonFontPixelSize;
 #endif
     QString m_buttonFontFamily;
 
     QStyle* m_fallbackStyle;
-    QStyle* fallbackStyle();
-
-    int m_frameLineWidth;
 };
 
 class StylePainter
